# ChangeLog for x11-libs/gtk+
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.140 2005/01/12 22:10:42 gustavoz Exp $

  12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> gtk+-2.4.14.ebuild:
  Stable on sparc

*gtk+-2.6.1 (12 Jan 2005)

  12 Jan 2005; foser <foser@gentoo.org> gtk+-2.6.1.ebuild :
  New release, closes a whole lot of empty bugs

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*gtk+-2.4.9-r2 (26 Dec 2004)

  26 Dec 2004; Markus Rothe <corsair@gentoo.org>
  +files/gtk+-2.4.9-ppc64.patch, gtk+-2.4.14.ebuild, +gtk+-2.4.9-r2.ebuild:
  I've added the patch from bug #64359, which fixes a cursor key problem on
  ppc64 to 2.4.9-r2 and 2.4.14. I marked 2.4.9-r2 stable on ppc64 and will
  remove this version when 2.4.14 will be marked stable. Credits go to Yuta
  SATOH.

  24 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> gtk+-2.4.13-r1.ebuild:
  Stable on alpha.

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> gtk+-2.4.13-r1.ebuild:
  Stable on hppa.

  21 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> gtk+-2.4.13-r1.ebuild:
  Stable on sparc

  20 Dec 2004; Dylan Carlson <absinthe@gentoo.org> gtk+-2.4.13-r1.ebuild:
  Stable on amd64.

  19 Dec 2004; Mike Gardiner <obz@gentoo.org> gtk+-2.4.13-r1.ebuild:
  Keyworded x86 and ppc for GNOME 2.8.1

*gtk+-2.4.14 (11 Dec 2004)

  11 Dec 2004; Mike Gardiner <obz@gentoo.org> +gtk+-2.4.14.ebuild:
  New version of gtk+

*gtk+-2.4.13-r1 (21 Nov 2004)

  21 Nov 2004; foser <foser@gentoo.org> gtk+-2.4.13-r1.ebuild :
  Add revised smoothscroll patch (#71807), moved patch to mirrors

  02 Nov 2004; Malcolm Lashley <malc@gentoo.org> :
  Fix missing digest - bug #69859

*gtk+-2.4.13 (02 Nov 2004)

  02 Nov 2004; foser <foser@gentoo.org> gtk+-2.4.13.ebuild :
  Not so fresh release (#64913)
  Add correct automake dep (#65796)
