@@ -1,3 +1,1 @@
-MD5 146ed9d12c9506fcf8745ddb2c22530a gtk+-2.6.1.tar.bz2 11070668
-MD5 ea90aff86c5f7d059bceb6b3550e6aac gtk+-2.6-smoothscroll-r2.patch 26277
-MD5 8608e20184bd9f4d3eca98d7c01c98ee gtk+-2.4.1-lib64.patch.bz2 6982
+MD5 5a046e852e4a0145197fca14969dcd4d gtk+-2.6.1-lib64.patch.bz2 6047
