@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.140 2005/01/12 22:10:42 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.141 2005/01/14 02:25:26 kingtaco Exp $
+
+  13 Jan 2005; Mike Doty <kingtaco@gentoo.org> gtk+-2.6.1.ebuild:
+  amd64 patch update by seemant
 
   12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> gtk+-2.4.14.ebuild:
   Stable on sparc
